# usbvfiod

./: .gitignore  .nixos-test-history  .typos.toml  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix
.github/workflows/: test.yml
docs/: overview.md
docs/developers/: architecture.md  guidelines.md  vmTest.md
nix/: tests.nix
src/: cli.rs  dynamic_bus.rs  main.rs  memory_segment.rs  xhci_backend.rs
src/device/: bus.rs  interrupt_line.rs  interval.rs  lib.rs  mod.rs  msi_message.rs  msi_receiver.rs  register_set.rs
src/device/pci/: config_space.rs  constants.rs  device_slots.rs  mod.rs  msix_table.rs  nusb.rs  realdevice.rs  registers.rs  rings.rs  traits.rs  trb.rs  usb_pcap.rs  usbrequest.rs  xhci.rs
udev_rules/: 71-usbvfiod.rules  99-usbvfiod.rules
