[package]
authors = ["Cyberus Technology GmbH"]
description = "A vfio-user server for USB pass-through."
name = "usbvfiod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.97", default-features = false, features = ["std"] }
arc-swap = "1.7.1"
clap = { version = "4.5.35", features = [
  "cargo",
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "usage",
], default-features = false }
memmap2 = "0.9.5"
nusb = { version = "0.1.14", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = [
  "log",
  "std",
] }
tracing-log = { version = "0.2.0", default-features = false, features = [
  "std",
] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "std",
  "alloc",
  "fmt",
  "env-filter",
  "ansi",
  "tracing-log",
] }
vfio-bindings = { version = "0.4.0", default-features = false }

# We currently pin to this version to get matching dependencies with vfio-bindings above.
vfio_user = { git = "https://github.com/rust-vmm/vfio-user.git", rev = "208dbb0d109e82173cab439505f26e428b8d3b17" }

[dev-dependencies]
proptest = "1.6.0"
libc = "0.2.172"
